add prettier config

--- a/MegaProject/package.json
+++ b/MegaProject/package.json
@@ -15,6 +15,7 @@
   "author": "Ridam Singhal",
   "license": "ISC",
   "devDependencies": {
-    "nodemon": "^3.0.1"
+    "nodemon": "^3.0.1",
+    "prettier": "^3.1.0"
   }
 }
